[gd_scene load_steps=7 format=3 uid="uid://bqsaslj40pxde"]

[ext_resource type="Script" uid="uid://dt7fyg148ajlp" path="res://scripts/CardView.gd" id="1_fbjlb"]
[ext_resource type="Texture2D" uid="uid://c8gcx47vftgdp" path="res://assets/HiroCard.png" id="2_kcw8g"]
[ext_resource type="FontFile" uid="uid://dgu0f8eyqeu8j" path="res://assets/pixel_operator/PixelOperatorHB.ttf" id="3_t68c4"]
[ext_resource type="Texture2D" uid="uid://usmjm6avckqn" path="res://assets/testdog.png" id="4_wid64"]
[ext_resource type="Texture2D" uid="uid://krpv7vvyyhoe" path="res://assets/RankBubble.png" id="5_iibmm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qdb3t"]
bg_color = Color(0.019241344, 0.07080879, 0.19610718, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="HiroCard" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(154, 210)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 192.0
script = ExtResource("1_fbjlb")

[node name="Frame" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_kcw8g")
expand_mode = 3

[node name="Overlay" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 14

[node name="MainVBox" type="VBoxContainer" parent="Overlay"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleArea" type="MarginContainer" parent="Overlay/MainVBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="NameLabel" type="Label" parent="Overlay/MainVBox/TitleArea"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_t68c4")
theme_override_font_sizes/font_size = 18
text = "Big Bad Wolf"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Overlay/MainVBox"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
theme_override_constants/separation = 0

[node name="ArtArea" type="MarginContainer" parent="Overlay/MainVBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="ArtSprite" type="TextureRect" parent="Overlay/MainVBox/ArtArea"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_wid64")
expand_mode = 3
stretch_mode = 5

[node name="DescArea" type="MarginContainer" parent="Overlay/MainVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="DescStack" type="Control" parent="Overlay/MainVBox/DescArea"]
layout_mode = 2

[node name="DarkBox" type="Panel" parent="Overlay/MainVBox/DescArea/DescStack"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_top = 10.0
offset_right = 62.5
offset_bottom = 70.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qdb3t")

[node name="DarkPadding" type="MarginContainer" parent="Overlay/MainVBox/DescArea/DescStack/DarkBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="Overlay/MainVBox/DescArea/DescStack/DarkBox/DarkPadding"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 10
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/italics_font_size = 10
theme_override_font_sizes/mono_font_size = 10
text = "DescriptionLabel (RichTextLabel)"
fit_content = true

[node name="DescVBox" type="VBoxContainer" parent="Overlay/MainVBox/DescArea/DescStack"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 63.0

[node name="MarginContainer" type="MarginContainer" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox"]
layout_mode = 2
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = -5

[node name="MetaRow" type="Control" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox/MarginContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="RankBadge" type="Control" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox/MarginContainer/MetaRow"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 30.0
offset_bottom = 15.0
grow_vertical = 2

[node name="RankTexture" type="TextureRect" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox/MarginContainer/MetaRow/RankBadge"]
z_index = 110
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_iibmm")
expand_mode = 3

[node name="RankLabel" type="Label" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox/MarginContainer/MetaRow/RankBadge/RankTexture"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeBadge" type="Control" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox/MarginContainer/MetaRow"]
custom_minimum_size = Vector2(30, 22)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -15.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2

[node name="TypeTexture" type="TextureRect" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox/MarginContainer/MetaRow/TypeBadge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_iibmm")
expand_mode = 3

[node name="TypeLabel" type="Label" parent="Overlay/MainVBox/DescArea/DescStack/DescVBox/MarginContainer/MetaRow/TypeBadge"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 12
text = "ATK"
horizontal_alignment = 1
vertical_alignment = 1
